@@ -10,6 +10,7 @@ Selenium 2 Beta 4
 * Added Location to the WebElement
 * ChromeDriver rewritten to use new built in mechanism
 * Added Advanced User Interaction API. Only Available for HTMLUnit at the moment
+* Profiles now delete their temp folders when driver.quit() is called
 
 Selenium 2 Beta 2
 
